--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
 	"name": "git-thing",
 	"version": "1.0.2",
 	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/nilsbuilds/git-thing"
+	},
 	"bin": "dist/cli.js",
 	"type": "module",
 	"engines": {
